# freshblu

./: .gitignore  Cargo.toml  HANDOFF.md  PLAN.md  README.md  build.sh  docker-compose.yml
.github/workflows/: ci.yml  deploy-api.yml  release.yml.disabled
crates/freshblu-cli/: Cargo.toml  README.md
crates/freshblu-cli/src/: main.rs
crates/freshblu-cli/tests/: server_integration.rs
crates/freshblu-client/: Cargo.toml  README.md
crates/freshblu-client/src/: http.rs  lib.rs  ws.rs
crates/freshblu-core/: Cargo.toml  README.md
crates/freshblu-core/benches/: core_bench.rs
crates/freshblu-core/src/: auth.rs  device.rs  error.rs  forwarder.rs  lib.rs  message.rs  permissions.rs  subscription.rs  token.rs
crates/freshblu-proto/: Cargo.toml  README.md
crates/freshblu-proto/src/: envelope.rs  lib.rs  subjects.rs
crates/freshblu-router/: Cargo.toml  README.md
crates/freshblu-router/src/: consumer.rs  fanout.rs  main.rs
crates/freshblu-router/tests/: fanout_tests.rs
crates/freshblu-server/: Cargo.toml  README.md
crates/freshblu-server/benches/: server_bench.rs
crates/freshblu-server/src/: bus.rs  config.rs  hub.rs  lib.rs  local_bus.rs  main.rs  metrics.rs  mqtt.rs  nats_bus.rs  presence.rs  rate_limit.rs  webhook.rs  ws.rs
crates/freshblu-server/src/handlers/: auth.rs  devices.rs  messages.rs  mod.rs  status.rs  subscribe.rs  subscriptions.rs  tokens.rs
crates/freshblu-server/tests/: api_integration.rs  arduino_compat.rs  hardening_tests.rs  message_delivery.rs  mqtt_integration.rs  new_endpoints_tests.rs  permission_matrix.rs  rate_limit_tests.rs  security_regression.rs  stress.rs  webhook_tests.rs  ws_integration.rs  ws_protocol.rs
crates/freshblu-server/tests/helpers/: mod.rs
crates/freshblu-store/: Cargo.toml  README.md
crates/freshblu-store/benches/: store_bench.rs
crates/freshblu-store/migrations/: 001_initial.sql
crates/freshblu-store/src/: cache.rs  lib.rs  postgres.rs  sqlite.rs  store.rs
crates/freshblu-store/tests/: sqlite_integration.rs  store_conformance.rs
crates/freshblu-wasm/: Cargo.toml  README.md
crates/freshblu-wasm/src/: lib.rs
deploy/digitalocean/: .env.example  Caddyfile  README.md  cloud-init.yml  docker-compose.yml
deploy/digitalocean/scripts/: backup.sh  setup.sh  update.sh
docker/: Dockerfile  Dockerfile.gateway  Dockerfile.router  docker-compose.prod.yml  docker-compose.yml
docs/: api.md  mqtt.md  permissions.md  webhooks.md  websocket.md
examples/browser/: index.html
examples/node/: example.ts
examples/python/: example.py
libraries/FreshBlu/: LICENSE  README.md  keywords.txt  library.properties
libraries/FreshBlu/examples/BasicRegister/: BasicRegister.ino
libraries/FreshBlu/examples/FullExample/: FullExample.ino
libraries/FreshBlu/examples/MqttMessaging/: MqttMessaging.ino
libraries/FreshBlu/examples/SendMessage/: SendMessage.ino
libraries/FreshBlu/src/: FreshBlu.cpp  FreshBlu.h  FreshBluHttp.cpp  FreshBluHttp.h  FreshBluMqtt.cpp  FreshBluMqtt.h
sdks/js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdks/js-cli/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdks/js-cli/src/: cli.test.ts  cli.ts  config.ts  output.ts
sdks/js/src/: browser.ts  core.ts  index.test.ts  index.ts  mqtt-lib.d.ts  mqtt.ts
sdks/python/: README.md  pyproject.toml
sdks/python/freshblu/: __init__.py
sdks/python/tests/: test_freshblu.py
site/: .gitignore  README.md  app-spec.yaml  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vitest.config.ts
site/.storybook/: main.ts  preview.ts
site/e2e/: docs.test.ts  landing.test.ts  playground.test.ts
site/src/: app.css  app.html
site/src/lib/api/: client.test.ts  client.ts  types.ts  ws.ts
site/src/lib/components/brand/: Logo.stories.ts  Logo.svelte  LogoFull.stories.ts  LogoFull.svelte
site/src/lib/components/layout/: Footer.svelte  Nav.svelte  Sidebar.svelte
site/src/lib/components/playground/: CredentialsPanel.svelte  DeviceCard.svelte  DevicePanel.svelte  EventStream.svelte  IconPicker.svelte  MessageComposer.svelte  PropertyEditor.svelte  RegisterDeviceModal.svelte  VaultSwitcher.svelte  WebhookEditor.svelte  WhitelistEditor.svelte
site/src/lib/components/ui/: Badge.stories.ts  Badge.svelte  Button.stories.ts  Button.svelte  Card.stories.ts  Card.svelte  CodeBlock.stories.ts  CodeBlock.svelte  Input.stories.ts  Input.svelte  LanguageTabs.svelte  Modal.stories.ts  Modal.svelte  StatusDot.stories.ts  StatusDot.svelte  Table.stories.ts  Table.svelte  Tabs.stories.ts  Tabs.svelte  ThemeToggle.svelte  Toast.svelte
site/src/lib/stores/: auth.test.ts  auth.ts  devices.test.ts  devices.ts  events.test.ts  events.ts  vault.ts
site/src/routes/: +layout.svelte  +page.svelte
site/src/routes/docs/: +layout.svelte  +page.svelte
site/src/routes/docs/explanation/architecture/: +page.svelte
site/src/routes/docs/explanation/forwarders/: +page.svelte
site/src/routes/docs/explanation/permission-model/: +page.svelte
site/src/routes/docs/explanation/subscriptions/: +page.svelte
site/src/routes/docs/how-to/deploy-production/: +page.svelte
site/src/routes/docs/how-to/manage-permissions/: +page.svelte
site/src/routes/docs/how-to/register-device/: +page.svelte
site/src/routes/docs/how-to/send-messages/: +page.svelte
site/src/routes/docs/how-to/set-up-webhooks/: +page.svelte
site/src/routes/docs/how-to/use-subscriptions/: +page.svelte
site/src/routes/docs/reference/arduino-library/: +page.svelte
site/src/routes/docs/reference/cli/: +page.svelte
site/src/routes/docs/reference/configuration/: +page.svelte
site/src/routes/docs/reference/error-codes/: +page.svelte
site/src/routes/playground/: +layout.svelte  +page.svelte
site/src/routes/playground/api/: +page.svelte
site/src/routes/playground/devices/: +page.svelte
site/src/routes/playground/messages/: +page.svelte
site/src/routes/playground/session/: +page.svelte
site/src/routes/playground/visualizer/: +page.svelte
site/src/test-mocks/: env.ts  environment.ts
(+11 files in other folders)
