[workspace]
members = [
    "crates/freshblu-core",
    "crates/freshblu-proto",
    "crates/freshblu-store",
    "crates/freshblu-server",
    "crates/freshblu-router",
    "crates/freshblu-cli",
]
exclude = ["crates/freshblu-wasm"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["FreshBlu Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/virgilvox/freshblu"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Web
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }

# MQTT
rumqttd = { version = "0.19", default-features = false }
rumqttc = "0.24"

# Storage
sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio-rustls", "uuid", "json", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth / Crypto
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
hmac = "0.12"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"
dotenvy = "0.15"

# NATS
async-nats = "0.38"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Metrics
prometheus = "0.13"
axum-prometheus = "0.7"
lazy_static = "1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
url = "2"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
async-trait = "0.1"
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
