[package]
name = "freshblu-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "freshblu"
path = "src/main.rs"

[dependencies]
freshblu-core = { path = "../freshblu-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5"
toml = "0.8"
colored = "2"
