[package]
name = "freshblu-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line client for the FreshBlu IoT messaging platform"
readme = "README.md"
keywords = ["iot", "meshblu", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "freshblu"
path = "src/main.rs"

[dependencies]
freshblu-core = { path = "../freshblu-core", version = "0.1.2" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5"
toml = "0.8"
colored = "2"
