[package]
name = "freshblu-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client SDK for the FreshBlu IoT messaging platform"
readme = "README.md"
keywords = ["iot", "meshblu", "client", "messaging", "websocket"]
categories = ["network-programming", "web-programming::http-client"]

[features]
default = ["http"]
http = ["dep:reqwest"]
ws = ["dep:tokio-tungstenite", "dep:futures"]

[dependencies]
freshblu-core = { path = "../freshblu-core", version = "1.0.0", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

# HTTP (default)
reqwest = { workspace = true, optional = true }

# WebSocket
tokio-tungstenite = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
