[package]
name = "freshblu-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NATS-based event router for FreshBlu horizontal scaling"
keywords = ["iot", "meshblu", "nats", "router"]
categories = ["network-programming"]

[dependencies]
freshblu-core = { path = "../freshblu-core", version = "1.0.0" }
freshblu-store = { path = "../freshblu-store", version = "1.0.0", default-features = false, features = ["postgres", "cache"] }
freshblu-proto = { path = "../freshblu-proto", version = "1.0.0" }

tokio = { workspace = true }
futures = { workspace = true }
async-nats = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }

[[bin]]
name = "freshblu-router"
path = "src/main.rs"
