[package]
name = "freshblu-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/WebSocket/MQTT server for the FreshBlu IoT messaging platform"
readme = "README.md"
keywords = ["iot", "meshblu", "mqtt", "websocket", "server"]
categories = ["network-programming", "web-programming"]

[features]
default = ["sqlite"]
sqlite = ["freshblu-store/sqlite"]
postgres = ["freshblu-store/postgres"]
cache = ["freshblu-store/cache"]

[dependencies]
freshblu-core = { path = "../freshblu-core", version = "0.1.1" }
freshblu-store = { path = "../freshblu-store", version = "0.1.1", default-features = false }
freshblu-proto = { path = "../freshblu-proto", version = "0.1.1" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
async-nats = { workspace = true }
redis = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }

# HTTP client (webhooks)
reqwest = { workspace = true }
url = { workspace = true }

# MQTT broker
rumqttd = { version = "0.19", default-features = false, features = ["default"] }

[dev-dependencies]
freshblu-core = { path = "../freshblu-core" }
freshblu-store = { path = "../freshblu-store" }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = { workspace = true }
criterion = { workspace = true }
rumqttc = "0.24"
portpicker = "0.1"
wiremock = "0.6"

[lib]
name = "freshblu_server"
path = "src/lib.rs"

[[bin]]
name = "freshblu-server"
path = "src/main.rs"

[[bench]]
name = "server_bench"
harness = false
