[package]
name = "freshblu-store"
version.workspace = true
edition.workspace = true

[dependencies]
freshblu-core = { path = "../freshblu-core" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
