[package]
name = "freshblu-wasm"
version = "1.0.0"
edition = "2021"
publish = false
authors = ["FreshBlu Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/virgilvox/freshblu"
description = "FreshBlu WASM client library for browser and Node.js"
readme = "README.md"
keywords = ["iot", "meshblu", "wasm", "websocket"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
freshblu-core = { path = "../freshblu-core", version = "1.0.0", default-features = false }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "console",
    "Window",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
anyhow = "1"
gloo-net = { version = "0.5", features = ["http", "websocket"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.serde-wasm-bindgen]
version = "0.6"

[profile.release]
opt-level = "s"
