[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freshblu"
version = "0.1.0"
description = "FreshBlu Python SDK - Meshblu-compatible IoT messaging"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["meshblu", "iot", "mqtt", "messaging", "m2m"]
dependencies = []

[project.optional-dependencies]
http = ["httpx>=0.25.0"]
ws = ["websockets>=12.0", "httpx>=0.25.0"]
all = ["httpx>=0.25.0", "websockets>=12.0"]

[project.urls]
Homepage = "https://github.com/youorg/freshblu"

[tool.hatch.build.targets.wheel]
packages = ["freshblu"]
